# okf-mcp-server

./: .gitignore  Cargo.toml  README.md  opencode.json
.github/workflows/: release.yml
.okf/: architecture.md  index.md  tool-reference.md
.opencode/skills/okf-spec/: SKILL.md
.opencode/skills/test-okf-tools/: SKILL.md
scripts/: install.ps1  install.sh
src/: audit.rs  config.rs  lib.rs  main.rs  server.rs  watch.rs
src/bundle/: fs_store.rs  git_store.rs  mod.rs  path_safety.rs  repo.rs  search_index.rs  store.rs  types.rs  validate.rs
src/tools/: read.rs  write.rs
tests/: integration.rs  test_mcp.sh  tools_test.rs
