[package]
name = "okf-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
pathdiff = "0.2"
regex = "1"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
git2 = "0.19"
tantivy = "0.26"
notify = "7"

[dev-dependencies]
tempfile = "3"
